Included list of tickers on the parameters
